--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "date-fns": "^1.30.1",
     "react": "^16.7.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-animated-css": "^1.0.4",
