--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-widgets": "^4.4.9",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "serve": "^10.1.2"
   },
